src/ui/src/components/table/scrollable-table.scss
@import "theme.scss";

.scrollable-table--cell {
  display: flex;
}

.scrollable-table--row-odd,
.scrollable-table--row-even {
  display: flex;
  flex-direction: column;
}

.scrollable-table--row-odd {
  background-color: $navy;
}

.scrollable-table--expanded {
  overflow: auto;
  flex: 1;
  padding-left: 20px;
}

.ReactVirtualized__Table__headerRow {
    background-color: $navy;
}

.ReactVirtualized__Table__row {
    font-size: 14px;
    height: 40px;
}

.ReactVirtualized__Table__headerTruncatedText {
  flex: auto;
}

.ReactVirtualized__Table__headerColumn {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0;
}

.scrollable-table--drag-handle {
  flex: 0 0 12px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: col-resize;
}

.scrollable-table--drag-handle:hover {
  color: $white;
}

.scrollable-table--expanded {
  position: relative;
}

.scrollable-table--expanded-modal-content {
  margin: 3rem;
  overflow: auto;
  padding: 1rem;
}

.scrollable-table--expanded-modal-trigger {
  position: absolute;
  top: 0;
  right: 0;
}

